--- a/E1.md
+++ b/E1.md
@@ -8,9 +8,9 @@ Profesor: Juan Carrasco Pastrián <br>
 
 En una empresa de software y capacitaciones se está desarrollando un sistema de evaluación  como parte de un paquete de e-learning comercial. En este sistema, los tests consisten de 1 ó más preguntas con alternativas. Se cuenta con el siguiente modelo de datos relacional para modelar los tests:
 
-`test(tnum INT, titulo VARCHAR,curso VARCHAR,descripcion VARCHAR,autor VARCHAR)`
-`preg(tnum INT,pnum INT,enunciado VARCHAR)`
-`pregalt(tnum INT,pnum INT,alt CHAR,texto VARCHAR,correcta BIT)`  
+`test(tnum INT, titulo VARCHAR,curso VARCHAR,descripcion VARCHAR,autor VARCHAR)`<br>
+`preg(tnum INT,pnum INT,enunciado VARCHAR)`<br>
+`pregalt(tnum INT,pnum INT,alt CHAR,texto VARCHAR,correcta BIT)`  <br>
 
 Responder la consulta SQL que resuelve las siguientes preguntas:<br>
 - Sobrescribir el test X con el test Y (X, Y son tnum).
